Сделан вход, сделана регистрация и нужно сделать запись в firebase. RecycleView на процентов 50 сделан. Надёюсь до завтра

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Carshering Application</string>
-    <string name="name">Carshering</string>
+    <string name="name">Каршеринг</string>
 </resources>
